--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 var urls = new Array();
  
 urls[0] = "https://t.co/HWOhUawciY";
+ urls[1] = "http://bit.ly/2KfS6AW";
+
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script> 
