--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 var urls = new Array();
  
 urls[0] = "https://t.co/HWOhUawciY";
+urls[1] = "https://t.co/85al8rGSop";
+urls[2] = "https://t.co/85al8rGSop";
 
+ 
+ 
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script> 
