--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 var urls = new Array();
  
 urls[0] = "https://t.co/HWOhUawciY";
-urls[1] = "https://t.co/85al8rGSop";
-urls[2] = "https://t.co/85al8rGSop";
+urls[1] = "https://t.co/dGKbgrTe2V";
 
  
  
