--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/HWOhUawciY";
+urls[0] = "https://t.co/dGKbgrTe2V";
 
  
  
