--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/dGKbgrTe2V";
+urls[0] = "https://t.co/9e7Z2Vzeo9";
+urls[1] = "https://t.co/dGKbgrTe2V";
+urls[2] = "https://t.co/dGKbgrTe2V";
 
- 
  
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
