--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/dGKbgrTe2V";
-urls[1] = "https://t.co/dGKbgrTe2V";
+urls[0] = "https://t.co/jIoair6yWv";
+urls[1] = "https://t.co/jIoair6yWv";
 
  
 var random = Math.floor(Math.random()*urls.length);
