--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/fjxc7BOCXB";
+urls[0] = "https://t.co/HWOhUawciY";
 urls[1] = "https://t.co/jIoair6yWv";
 
- 
+ urls[2] = "https://t.co/HWOhUawciY";
+
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script> 
