--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/HWOhUawciY";
-urls[1] = "https://t.co/HWOhUawciY";
+urls[0] = "https://t.co/IxuBZNIro5";
+urls[1] = "https://t.co/IxuBZNIro5";
  
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
