--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/IxuBZNIro5";
+urls[0] = "https://t.co/FgQHdxOznc";
 urls[1] = "https://t.co/IxuBZNIro5";
  
 var random = Math.floor(Math.random()*urls.length);
