--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/FgQHdxOznc";
-urls[1] = "https://t.co/IxuBZNIro5";
+urls[0] = "https://t.co/fjxc7BOCXB";
+urls[1] = "https://t.co/dGKbgrTe2V";
+ urls[2] = "https://t.co/5QMszxmhUC";
+
+ 
  
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
