--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ var urls = new Array();
  
 
 urls[0] = "https://t.co/5QMszxmhUC";
+urls[1] = "https://t.co/G7Sy81U3lR";
 
- 
  
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
