--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 var urls = new Array();
  
 
-urls[0] = "https://t.co/G7Sy81U3lR";
+urls[0] = "https://t.co/HWOhUawciY";
 
  
 var random = Math.floor(Math.random()*urls.length);
