--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ var urls = new Array();
  
 
 urls[0] = "https://t.co/HWOhUawciY";
+urls[1] = "https://t.co/OKzOTPDDUV";
 
+ 
  
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
