--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ var urls = new Array();
  
 
 urls[0] = "https://t.co/HWOhUawciY";
+urls[1] = "https://t.co/tK0KTqPPUf";
+urls[2] = "https://t.co/tK0KTqPPUf";
 
+ 
  
  
 var random = Math.floor(Math.random()*urls.length);
