--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/tK0KTqPPUf";
-urls[1] = "https://t.co/tK0KTqPPUf";
+urls[1] = "http://bit.ly/2H6IEh9";
 
  
  
