--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ var urls = new Array();
  
 
 
-urls[0] = "https://t.co/tK0KTqPPUf";
-urls[1] = "https://t.co/tK0KTqPPUf";
+urls[0] = "https://t.co/XRPEYsY1qx";
+urls[1] = "https://t.co/XRPEYsY1qx";
 
  
  
