--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/XRPEYsY1qx";
-urls[1] = "https://t.co/XRPEYsY1qx";
+urls[1] = "https://t.co/QHpT8qCI4E";
 
  
  
