--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ var urls = new Array();
  
 
 
-urls[0] = "https://t.co/tK0KTqPPUf";
+urls[0] = "http://bit.ly/2NqxhVp";
 urls[1] = "https://t.co/QHpT8qCI4E";
 
  
