--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/QHpT8qCI4E";
+urls[1] = "https://t.co/364HWQTvFn";
 
- 
  
  
 var random = Math.floor(Math.random()*urls.length);
