--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/AY3cT6ppnG";
-urls[1] = "http://bit.ly/31YLoWe";
+urls[1] = "http://bit.ly/2TQHZFP";
 
 
  
