--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ var urls = new Array();
  
 
 
-urls[0] = "https://t.co/PQMZOfTvXc";
+urls[0] = "https://t.co/zUxYJEIS38";
 urls[1] = "http://bit.ly/2TQHZFP";
 
 
