--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ var urls = new Array();
 
 
 urls[0] = "http://bit.ly/2TQHZFP";
+urls[1] = "http://bit.ly/2HqvDzc";
+
 
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
