--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ var urls = new Array();
 
 urls[0] = "http://bit.ly/2TQHZFP";
 urls[1] = "http://bit.ly/2HqvDzc";
+urls[2] = "https://t.co/lVFQ0MoANl";
 
 
 var random = Math.floor(Math.random()*urls.length);
