--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ var urls = new Array();
  
 
 
-urls[0] = "http://bit.ly/2TQHZFP";
+urls[0] = "https://t.co/6OXsOmvVml";
 urls[1] = "http://bit.ly/2HqvDzc";
 urls[2] = "https://t.co/lVFQ0MoANl";
 urls[3] = "https://t.co/zUxYJF0sUG";
