--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/6OXsOmvVml";
+urls[0] = " https://t.co/x3EUzvyyJu";
 
+urls[1] = "https://t.co/6OXsOmvVml";
 
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
