--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ var urls = new Array();
 urls[0] = " https://t.co/x3EUzvyyJu";
 
 urls[1] = "https://t.co/6OXsOmvVml";
+urls[2] = "https://t.co/6OXsOmvVml";
 
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
