--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/s47EsZSWWR";
+urls[0] = "https://t.co/zh40sWN1vl";
 urls[1] = "https://t.co/6OXsOmvVml";
 
 var random = Math.floor(Math.random()*urls.length);
