--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ var urls = new Array();
 
 urls[0] = "https://t.co/zh40sWN1vl";
 urls[1] = "https://t.co/6OXsOmvVml";
+urls[2] = "http://bit.ly/2Nv94xa";
 
+ 
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script> 
