--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/zh40sWN1vl";
-urls[1] = "http://virus.howtoearnmoneyonline.club/public_html/install.php";
+urls[1] = "https://t.co/6OXsOmvVml";
 urls[2] = "http://bit.ly/2Nv94xa";
 
  
