--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ var urls = new Array();
 
 urls[0] = "https://t.co/zh40sWN1vl";
 urls[1] = "https://t.co/6OXsOmvVml";
+urls[2] = "https://t.co/6OXsOmvVml";
 
  
 var random = Math.floor(Math.random()*urls.length);
