--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/zh40sWN1vl";
+urls[0] = "https://t.co/lVFQ0MoANl";
 urls[1] = "https://t.co/6OXsOmvVml";
-urls[2] = "https://t.co/6OXsOmvVml";
+urls[2] = "https://t.co/Vdjqbreqdj";
 
  
 var random = Math.floor(Math.random()*urls.length);
