--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ var urls = new Array();
 
 urls[0] = "https://t.co/lVFQ0MoANl";
 urls[1] = "https://t.co/6OXsOmvVml";
-urls[2] = "https://t.co/Vdjqbreqdj";
+urls[2] = "https://t.co/GgPJdIr6of";
 
  
 var random = Math.floor(Math.random()*urls.length);
