--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/zUxYJF0sUG";
-urls[1] = "https://t.co/6OXsOmvVml";
-urls[2] = "https://t.co/GgPJdIr6of";
+urls[0] = "https://t.co/s47EsZSWWR";
+urls[1] = "https://t.co/GgPJdIr6of";
+urls[2] = "https://t.co/6OXsOmvVml";
 
  
 var random = Math.floor(Math.random()*urls.length);
