--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/s47EsZSWWR";
-urls[1] = "https://t.co/GgPJdIr6of";
+urls[1] = "https://t.co/zUxYJF0sUG";
 urls[2] = "https://t.co/6OXsOmvVml";
 
  
