--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ var urls = new Array();
 
 urls[0] = "https://t.co/s47EsZSWWR";
 urls[1] = "https://t.co/zUxYJF0sUG";
-urls[2] = "https://t.co/6OXsOmvVml";
+urls[2] = "http://bit.ly/33VVXel";
 
  
 var random = Math.floor(Math.random()*urls.length);
