--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/n5n8TE4bRp";
-urls[1] = "http://bit.ly/33VVXel";
+urls[1] = "https://t.co/lVFQ0MoANl";
+urls[2] = "http://bit.ly/33VVXel";
 
+ 
  
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
