--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/lVFQ0MoANl";
+urls[0] = "https://t.co/GgPJdIr6of";
 urls[1] = "https://t.co/s47EsZSWWR";
 urls[2] = "http://bit.ly/33VVXel";
 
