--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/GgPJdIr6of";
+urls[0] = "https://t.co/zUxYJF0sUG";
 urls[1] = "https://t.co/R7tlbeDIBU";
 urls[2] = "http://bit.ly/33VVXel";
 
