--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ var urls = new Array();
 
 urls[0] = "https://t.co/zUxYJF0sUG";
 urls[1] = "https://t.co/R7tlbeDIBU";
-urls[2] = "http://bit.ly/33VVXel";
+urls[2] = "https://t.co/YLOCEIgB7I";
 
  
  
