--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/zUxYJF0sUG";
-urls[1] = "https://t.co/R7tlbeDIBU";
-urls[2] = "https://t.co/YLOCEIgB7I";
+urls[1] = "https://t.co/FMgl1pGo9U";
+urls[2] = "https://t.co/FMgl1pGo9U";
 
  
  
