--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ var urls = new Array();
 
 
 
-urls[0] = "https://t.co/R7tlbeDIBU";
+urls[0] = "http://bit.ly/2ZwyGvT";
 urls[1] = "https://t.co/FMgl1pGo9U";
-urls[2] = "https://t.co/FMgl1pGo9U";
 
  
  
