--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ var urls = new Array();
 
 
 urls[0] = "http://bit.ly/2ZwyGvT";
-urls[1] = "https://t.co/FMgl1pGo9U";
+urls[1] = "http://bit.ly/2ZwyGvT";
 
  
  
