--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ var urls = new Array();
  
 
 
-
-urls[0] = "http://bit.ly/2ZwyGvT";
+urls[0] = "https://t.co/EXVde7UnGv";
 urls[1] = "http://bit.ly/2ZwyGvT";
+urls[2] = "https://t.co/FMgl1pGo9U";
 
  
  
