--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var urls = new Array();
 
 
 urls[0] = "https://t.co/EXVde7UnGv";
-urls[1] = "http://bit.ly/2ZwyGvT";
+urls[1] = "https://t.co/VMBX8qxuOX";
 urls[2] = "https://t.co/FMgl1pGo9U";
 
  
