--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ var urls = new Array();
  
 
 urls[0] = "https://t.co/VMBX8qxuOX";
-urls[1] = "https://t.co/SCgzAM7cvv";
+urls[1] = "https://t.co/XG4r6y7L0W";
 urls[2] = "https://t.co/SCgzAM7cvv";
 
  
