--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 var urls = new Array();
  
 
-urls[0] = "https://t.co/XG4r6y7L0W";
-urls[1] = "https://t.co/SCgzAM7cvv";
+urls[0] = "https://t.co/n5n8TE4bRp";
 
  
  
