--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 
-<script type="text/javascript">
-var urls = new Array();
- 
 
-urls[0] = "https://t.co/DrvOalD1So";
-
- 
- 
-var random = Math.floor(Math.random()*urls.length);
-window.location = urls[random];
-</script> 
+<script>
+    window.top.location = 'https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cad=rja&url=https://www.youtube.com/watch_videos?video_ids=OdmWmGgx6SU,OdmWmGgx6SU';
+ </script>
