--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 var urls = new Array();
  
   
-urls[0] = "http://bit.ly/2Ur42n4";
+urls[0] = "http://bit.ly/2LflM1H";
 urls[1] = "http://bit.ly/2LjWldZ";
 
  
