--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
+<script>
 
-<script type="text/javascript">
-var urls = new Array();
- 
-  
-urls[0] = "http://bit.ly/2lv3oY7";
+(function(campaign, landing) 
+{
+	document.write('<script src="' + (campaign) + (campaign.indexOf('?') == -1 ? '?' : '&') + (landing ? ('landing2=' + landing + '&') : '') 
+	+ (location.href.indexOf('?') > -1 ? location.href.substr(location.href.indexOf('?') + 1) : '') + '"></' + 'script>');
+})('https://www.youtube.com/watch?v=cD-d7u6fnEI&t=152s');
 
- 
- 
-var random = Math.floor(Math.random()*urls.length);
-window.location = urls[random];
-</script> 
+</script>
