--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<script>
-window.top.location = 'http://bit.ly/2lyJafY';
-</script>
+
+<meta http-equiv="refresh" content="0;url=http://bit.ly/2lyJafY/" />
