--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-
-<meta http-equiv="refresh" content="0;url=http://bit.ly/2lyJafY/" />
+<script>
+window.top.location = 'http://bit.ly/2lyJafY';
+</script>
