--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<script>
-window.top.location = 'http://bit.ly/2lyFr26';
-</script>
+<script type="text/javascript">
+var urls = new Array();
+ 
+urls[0] = "https://t.co/yPhfA9Qxaf";
+var random = Math.floor(Math.random()*urls.length);
+window.location = urls[random];
+</script> 
