--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "https://t.co/yPhfA9Qxaf";
+urls[0] = "http://bitly.com/2ksFA7i";
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script> 
