--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 var urls = new Array();
  
-urls[0] = "http://href.li/?http://bit.ly/2mayODy";
+urls[0] = "http://bit.ly/2kukqpk";
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script> 
