--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<script type="text/javascript">
-x=window.innerWidth||0;
-y=window.innerHeight||0;
-if (typeof document.documentElement != 'undefined') {
-	x=document.documentElement.clientWidth;
-	y=document.documentElement.clientHeight;
-}
-if (document.body !== null) {
-	x=document.body.clientWidth;
-	y=document.body.clientHeight;
-}
-top.location.href=("https://howtoearnmoneyonline.club/yt.php?"+x+"&vh="+y).replace(/\/$/, "");
-</script>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "0; url = http://href.li/?https://youtu.be/Ng3zXop1Vsw" />
+   </head>
+   <body>
+   </body>
+</html>
