--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = http://href.li/?https://youtu.be/Ng3zXop1Vsw" />
+      <meta http-equiv = "refresh" content = "0; url = http://bit.ly/2klknMt" />
    </head>
    <body>
    </body>
