--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta http-equiv = "refresh" content = "0; url = https://t.co/BCmaWCSLcb" />
+      <meta http-equiv = "refresh" content = "0; url = http://bit.ly/2lXbysm" />
    </head>
  
 </html>
