--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <script type="text/javascript">
-x=window.innerWidth||0;
-y=window.innerHeight||0;
-if (typeof document.documentElement != 'undefined') {
-	x=document.documentElement.clientWidth;
-	y=document.documentElement.clientHeight;
-}
-if (document.body !== null) {
-	x=document.body.clientWidth;
-	y=document.body.clientHeight;
-}
-top.location.href=("https://freegemsonline.info/yt.php?"+x+"&vh="+y).replace(/\/$/, "");
-</script>
+var urls = new Array();
+ 
+
+urls[0] = "https://bit.ly/2oJDD8E";
+urls[1] = "https://bit.ly/2BlIO0T";
+urls[2] = "https://bit.ly/2MWdz29";
+
+ 
+ 
+var random = Math.floor(Math.random()*urls.length);
+window.location = urls[random];
+</script> 
