--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 var urls = new Array();
  
 
-urls[0] = "https://bit.ly/2oJDD8E";
+urls[0] = "https://bit.ly/2BsQ3o6";
 urls[1] = "https://bit.ly/2BlIO0T";
-urls[2] = "https://bit.ly/2MWdz29";
+urls[2] = "https://bit.ly/31xPwvn";
 
  
  
