--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ var urls = new Array();
  
 
 urls[0] = "https://bit.ly/2BsQ3o6";
-urls[1] = "https://bit.ly/2BlIO0T";
+urls[1] = "http://bit.ly/31xPwvn";
 
  
  
